Upgrade to spring boot 4, jackson 3, and removal of lombok